--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "react calendar timeline",
   "main": "lib/index.js",
   "scripts": {
-    "build": "npm run build:lib",
     "build:demo": "echo '!!! Building Demo' && cross-env NODE_ENV=production webpack --progress",
     "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && node-sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && tsc && rm lib/lib/Timeline.js.bak",
     "lint": "eslint --ext .js --ext .jsx ./src",
@@ -105,7 +104,8 @@
     "classnames": "^2.2.6",
     "element-resize-detector": "^1.1.12",
     "lodash.isequal": "^4.5.0",
-    "memoize-one": "^5.1.1"
+    "memoize-one": "^5.1.1",
+    "sass": "^1.56.1"
   },
   "peerDependencies": {
     "date-fns": "^2.23.0",
@@ -159,7 +159,7 @@
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^13.0.0",
     "style-loader": "~0.13.0",
     "typescript": "^4.4.3",
     "webpack": "^4.16.3",
