--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "element-resize-detector": "^1.1.12",
     "lodash.isequal": "^4.5.0",
     "memoize-one": "^5.1.1",
+    "moment": "^2.29.4",
     "sass": "^1.56.1"
   },
   "peerDependencies": {
@@ -159,7 +160,7 @@
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.2",
-    "sass-loader": "^13.0.0",
+    "sass-loader": "^10",
     "style-loader": "~0.13.0",
     "typescript": "^4.4.3",
     "webpack": "^4.16.3",
