--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "date-fns-tz": "^1.3.7",
     "element-resize-detector": "^1.1.12",
     "lodash.isequal": "^4.5.0",
     "memoize-one": "^5.1.1",
