--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "@ti-gecko/react-calendar-timeline",
-  "version": "0.30.4",
+  "name": "@r1k3sh/react-calendar-timeline",
+  "version": "1.30.10",
   "description": "react calendar timeline",
   "main": "lib/index.js",
+  "type": "commonjs",
   "scripts": {
     "build:demo": "echo '!!! Building Demo' && cross-env NODE_ENV=production webpack --progress",
     "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && node-sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && tsc && rm lib/lib/Timeline.js.bak",
     "lint": "eslint --ext .js --ext .jsx ./src",
     "lint:fix": "prettier-eslint --parser babylon --write \"src/**/*.js\"",
     "prepublish": "npm run build:lib",
-    "push": "npm publish --access public --scope @ti-gecko .",
+    "push": "npm publish --access public --scope r1k3sh .",
     "start": "webpack-dev-server --hot --host 0.0.0.0 --display-modules",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "rimraf": "./node_modules/rimraf/bin.js"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "files": [
     "lib",
     "src"
   ],
-  "homepage": "https://github.com/ricard33/react-calendar-timeline",
+  "homepage": "https://github.com/sr1k3sh/react-calendar-timeline",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ricard33/react-calendar-timeline.git"
+    "url": "https://github.com/sr1k3sh/react-calendar-timeline.git"
   },
-  "author": "Cedric RICARD <ricard33@gmail.com>",
+  "author": "Cedric RICARD <sr1k3sh@gmail.com>",
   "contributors": [
     {
       "name": "Marius Andra",
@@ -155,8 +161,8 @@
     "prettier-eslint-cli": "^5.0.1",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.2",
     "rimraf": "^2.6.2",
