--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "@ti-gecko/react-calendar-timeline",
-  "version": "0.30.4",
+  "name": "@r1k3sh/react-calendar-timeline",
+  "version": "1.30.21",
   "description": "react calendar timeline",
   "main": "lib/index.js",
   "scripts": {
     "build:demo": "echo '!!! Building Demo' && cross-env NODE_ENV=production webpack --progress",
-    "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && node-sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && tsc && rm lib/lib/Timeline.js.bak",
+    "build:lib": "echo '!!! Building Library' && rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib && node-sass src/lib/Timeline.scss lib/Timeline.css && sed -i'.bak' 's/Timeline\\.scss/Timeline\\.css/g' lib/lib/Timeline.js && rm lib/lib/Timeline.js.bak",
     "lint": "eslint --ext .js --ext .jsx ./src",
     "lint:fix": "prettier-eslint --parser babylon --write \"src/**/*.js\"",
     "prepublish": "npm run build:lib",
-    "push": "npm publish --access public --scope @ti-gecko .",
+    "push": "npm publish --access public --scope r1k3sh .",
     "start": "webpack-dev-server --hot --host 0.0.0.0 --display-modules",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "rimraf": "./node_modules/rimraf/bin.js"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "files": [
     "lib",
     "src"
   ],
-  "homepage": "https://github.com/ricard33/react-calendar-timeline",
+  "homepage": "https://github.com/sr1k3sh/react-calendar-timeline",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ricard33/react-calendar-timeline.git"
+    "url": "https://github.com/sr1k3sh/react-calendar-timeline.git"
   },
-  "author": "Cedric RICARD <ricard33@gmail.com>",
+  "author": "Cedric RICARD <sr1k3sh@gmail.com>",
   "contributors": [
     {
       "name": "Marius Andra",
@@ -102,6 +107,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "date-fns-tz": "^1.3.7",
     "element-resize-detector": "^1.1.12",
     "lodash.isequal": "^4.5.0",
     "memoize-one": "^5.1.1",
